# haskell-course

./: .gitignore  .stylish-haskell.yaml  README.md  TOOLS.md  stack.yaml
docs/: TASK2.md  TASK3.md  TOOLS.md
hw1/: .gitignore  LICENSE  README.md  hw1.cabal  package.yaml
hw1/src/: Hw1.hs
hw1/src/Hw1/: Part1.hs  Part2.hs  Part3.hs  Part4.hs  Part5.hs
hw1/src/Hw2/: Part1.hs  Part2.hs  Part3.hs
hw1/test/: Homework1Spec.hs  Hw1Spec.hs  Test.sh
hw1/test/Hw1/: Part1Spec.hs  Part2Spec.hs  Part3Spec.hs
hw2/: README.md  hw2.cabal  package.yaml
hw2/src/: Hw2.hs
hw2/src/Hw2/: Part1.hs  Part2.hs  Part3.hs
hw2/test/: Hw2Spec.hs
hw3/: README.md  hw3.cabal  package.yaml
hw3/src/: Hw3.hs  Main.hs
hw3/test/: Hw3Spec.hs
hw4/: README.md
