name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com/egormkn/haskell-course/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Egor Makarenko
maintainer:          egormkn@yandex.ru
copyright:           2018 Egor Makarenko

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:
      Hw1
      Hw1.Part1
      Hw1.Part2
      Hw1.Part3
      Hw1.Part4
      Hw1.Part5
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010

test-suite hw1-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.9 && <5
    , hw1
    , hspec
  other-modules:
      Hw1Spec
  default-language: Haskell2010
