name:                hw2
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com/egormkn/haskell-course/tree/master/hw2#readme
license:             MIT
license-file:        LICENSE
author:              Egor Makarenko
maintainer:          egormkn@yandex.ru
copyright:           2018 Egor Makarenko

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.4.1

library
  hs-source-dirs:      src
  exposed-modules:
      Hw2
      Hw2.Part1
      Hw2.Part2
      Hw2.Part3
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010

test-suite hw2-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.9 && <5
    , hw2
    , hspec
  other-modules:
      Hw2Spec
  default-language: Haskell2010
