name:                hw3
version:             0.1.0.0
synopsis:            Synopsis for task 3
description:         Task 3 for FP ITMO course

homepage:            https://github.com/egormkn/haskell-course/tree/master/hw3
license:             MIT
license-file:        LICENSE
author:              Egor Makarenko
maintainer:          egormkn@yandex.ru
copyright:           2018 Egor Makarenko

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.4.1

library
  hs-source-dirs:      src
  exposed-modules:     Hw3
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , containers
                     , random
                     , mtl
                     , megaparsec
  default-language:    Haskell2010

test-suite hw3-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hw3
                     , hspec
                     , containers
                     , random
                     , mtl
                     , megaparsec
  other-modules:
      Hw2Spec
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
